boards/boardstyle.css
/* Generic */

:root {
	--pinfo-transition-time: 0.2s;
	--pinfo-delay: 0.2s;
}

* {
	font-family: "Roboto";
	font-weight: 400;
	/*outline: 1px dashed #ff000033 !important;*/
}

.container {
	transform-origin: 0px 0px;
	position: relative;
	overflow: visible;
	pointer-events: painted;
}

/* JQuery Resizable */

.ui-resizable {
	position: relative;
}

.ui-resizable-handle {
	position: absolute;
	font-size: 0.1px;
	display: block;
}

.ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle {
	display: none;
}

.ui-resizable-n {
	cursor: n-resize;
	height: 7px;
	width: 100%;
	top: -5px;
	left: 0;
}

.ui-resizable-s {
	cursor: s-resize;
	height: 7px;
	width: 100%;
	bottom: -5px;
	left: 0;
}

.ui-resizable-e {
	cursor: e-resize;
	width: 7px;
	right: -5px;
	top: 0;
	height: 100%;
}

.ui-resizable-w {
	cursor: w-resize;
	width: 7px;
	left: -5px;
	top: 0;
	height: 100%;
}

.ui-resizable-se {
	cursor: se-resize;
	width: 12px;
	height: 12px;
	right: 1px;
	bottom: 1px;
}

.ui-resizable-sw {
	cursor: sw-resize;
	width: 9px;
	height: 9px;
	left: -5px;
	bottom: -5px;
}

.ui-resizable-nw {
	cursor: nw-resize;
	width: 9px;
	height: 9px;
	left: -5px;
	top: -5px;
}

.ui-resizable-ne {
	cursor: ne-resize;
	width: 9px;
	height: 9px;
	right: -5px;
	top: -5px;
}

/* JQuery Tabs */

.ui-tabs {
	position: relative;
	padding: 0.5em;
	zoom: 1;
}

.ui-tabs .ui-tabs-nav {
	margin: 0px;
	padding: 0px;
	padding-bottom: 2.2em;
	border: 5px;
	border-color: #000;
}

.ui-tabs .ui-tabs-nav li {
	list-style: none;
	float: left;
	position: relative;
	top: 0px;
	margin: 0;
	border-bottom: 0 !important;
	padding: 0;
	white-space: nowrap;
}

.ui-tabs .ui-tabs-nav li a {
	display: block;
	float: left;
	padding: 8px;
	text-overflow: ellipsis;
	overflow: hidden;
	max-width: 150px;
	min-width: 25px;
	height: 19px;
	text-decoration: none;
}

.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a {
	cursor: text;
}

.ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a {
	cursor: pointer;
}

.ui-tabs .ui-tabs-panel {
	padding: 10px;
	min-height: 700px;
	max-height: none;
}

.ui-tabs .ui-tabs-hide {
	display: none !important;
}

html {
	height: 100%;
}

body {
	margin: 10px;
	height: calc(100% - 20px);
}

.tabs {
	background-color: #ececec;
	height: calc(100% - 20px);
}

.tabpane {
	height: calc(100% - 54px);
	background-color: #c5c5c5;
	overflow: hidden;
	margin: 0px;
	padding: 0px;
}

.tab>a {
	color: #000000;
	background-color: #d6d6d6;
	transition: background-color 0.2s, font-weight 0.2s;
}

.tab.ui-state-hover>a {
	background-color: #d0d0d0;
}

.tab.ui-state-active>a {
	font-weight: bold;
	background-color: #c5c5c5;
}

/* board */

.board {
	/*background-color: #323232;*/
	background-color: #ffffff;
	width: 100%;
	height: 100%;
	overflow: hidden;
	padding: 0px;
	margin: 0px;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.ctxmenu {
	position: absolute;
	background-color: #eeeeee;
	border: 1px solid #cccccc;
	border-radius: 2px;
	box-shadow: 6px 6px 10px #44444488;
	min-width: 150px;
	max-width: 300px;
	max-height: 600px;
}

.ctxmenu>header {
	font-size: 16px;
	font-weight: bold;
	padding: 0.2em 0.4em;
	background-color: #e0e0e0;
	border-bottom: 1px solid #cccccc;
}

.menu {
	overflow-x: hidden;
	overflow-y: scroll;
}

.menusearch {
	width: calc(100% - 6px);
	margin: 1px;
}

.menuitem {
	display: block;
	font-size: 15px;
	padding: 0.1em 0.4em;
	border-bottom: 1px solid #e0e0e0;
}

.menuitem:hover, .menuitem[selected] {
	background-color: #dddddd;
}

canvas {
	pointer-events: none;
	width: 100%;
	height: 100%;
}

/* Node */

.node {
	/*min-width: 100px;*/
	height: 75px;
	/*border: 4px solid #6b6b6b;*/
	border-radius: 10px;
	background-color: #d7d7d7;
	overflow: hidden;
	position: absolute;
	display: flex;
	flex-direction: column;
	transition: transform 2s;
}

.node.comment {
	border-radius: 0px;
	border: 2px solid #4a4a4a;
	background-color: #f2f2f2;
}

.node.comment>header {
	background-color: #f2f2f2;
	border: none;
}

.node.comment>.body>.pins {
	background-color: #f2f2f2;
	border: none;
}

.node.comment>.body>.pinfos {
	background: none;
	border: none;
}

.body {
	display: flex;
	height: 100%;
	/*width: 100%;*/
	order: 1;
	justify-content: space-between;
}

.node[selected] {
	box-shadow: 0px 0px 2px 1px #ffcf00;
	border-color: #938400;
}

.node.resizable {
	border-bottom-right-radius: 0px;
}

.node>header[hidden] {
	background-color: #c1c1c1;
	padding: 0em 0.3em;
	height: 15px;
	color: none;
	transition: background-color 0.3s, color 0.3s, flex 0.3s, padding 0.3s;
}

.node>header {
	padding: 0.3em 0.3em 0.5em 0.5em;
	height: 15px;
	background-color: #9f9f9f;
	color: #000000;
	order: 0;
	/*border-bottom: 2px solid #6b6b6b;*/
	white-space: nowrap;
}

.center>textarea {
	font-size: 15px;
	overflow: scroll;
	width: 100%;
	height: 100%;
	/*border: none;*/
	margin: 5px;
	background: none;
}

/* Node Inner */

.center {
	order: 5;
	flex: 1 1;
	overflow: hidden;
	background: none;
	transition: flex var(--pinfo-transition-time) ease var(--pinfo-delay);
	display: table;
	height: 100%;
}

.nodeval {
	transform: translateY(50%);
	margin: 0px 25px 0px 10px;
	text-overflow: ellipsis;
	display: table;
	text-align: left;
	font-family: "Roboto";
	font-weight: 400;
	font-size: 20px;
	border: none;
	background: none;
	color: #6c6c6c;
}

input[type=checkbox] {
	visibility: hidden;
}

label.boolean {
	padding: 0 4px;
	background: none;
	transition: all 0.2s ease;
	border: 2px solid #460000;
	border-radius: 10px;
}

label.boolean:after {
	content: "False"
}

input[type=checkbox]:checked+label.boolean {
	border: 2px solid #ed2121;
	color: #ed2121;
	border-radius: 0px;
}

input[type=checkbox]:checked+label.boolean:after {
	content: "True"
}

.container.boolean {
	height: 20px;
	width: 100%;
}

.center>.text {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
	font-family: "Roboto";
	font-weight: 400;
	font-size: 50px;
	height: 100%;
	color: #bdbdbd;
	border: none;
	background: none;
	color: #6c6c6c;
}

.nodeval.string {
	box-shadow: 0px 0px 4px 1px #e963c0;
}

.nodeval.int {
	box-shadow: 0px 0px 4px 1px #64d4ed;
	width: 75px;
}

.nodeval.double {
	box-shadow: 0px 0px 4px 1px #7bed3e;
	width: 100px;
}

/* Pins */

.pins {
	background-color: #bebebe;
	flex: 0 0 25px;
	height: 100%;
	overflow: visible;
	border: none;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-around;
	/* this fixes the outpins shaking */
	-webkit-backface-visibility: hidden;
	-webkit-transform: translateZ(0) scale(1.0, 1.0);
}

.pinfos {
	flex: 0 1 0;
	background-color: #bebebe;
	height: 100%;
	transition: all var(--pinfo-transition-time) ease var(--pinfo-delay);
	display: flex;
	flex-direction: row;
	overflow: hidden;
}

.pinfocol {
	height: 100%;
	flex-basis: 1;
	display: flex;
	flex-direction: column;
	margin: 0px 6px 0px 2px;
	justify-content: space-around;
}

.pinfo {
	flex-basis: 1;
	height: 20px;
	overflow: visible;
	display: flex;
	flex-direction: column;
	justify-content: space-around;
}

.pinfo>.text {
	vertical-align: middle;
	margin: 0px;
	font-size: 14px;
	overflow: hidden;
	white-space: nowrap;
	display: block;
	pointer-events: none;
}

.inpinfo>.text {
	text-align: left;
}

.outpinfo>.text {
	text-align: right;
}

.pins:not([nopinfo]):hover+.pinfos, .pinfos[opened], .pinfos:hover {
	transition: all var(--pinfo-transition-time) ease var(--pinfo-delay);
	background-color: #bebebe;
	flex: 1 0 0;
}

.pins:not([nopinfo]):hover~.center, .pinfos[opened]~.center, .pinfos:hover~.center {
	transition: flex var(--pinfo-transition-time) ease var(--pinfo-delay);
	flex: 0 1 0;
}

.inpins {
	order: 0;
}

.outpins {
	order: 10;
}

.inpinfos {
	order: 1;
	border-right: 0px solid #98989800;
	justify-content: flex-start;
}

.outpinfos {
	order: 9;
	border-left: 0px solid #98989800;
	justify-content: flex-end;
}

.pins:hover+.inpinfos, .inpinfos[opened], .inpinfos:hover {
	border-right: 2px solid #6b6b6b;
}

.pins:hover+.outpinfos, .outpinfos[opened], .outpinfos:hover {
	border-left: 2px solid #6b6b6b;
}

/* pin value input */

.pinval {
	margin: 0px;
	height: 100%;
	/*float: right;*/
	width: 60px;
}

/* Selection Box */

.selectbox {
	position: absolute;
	background-color: #fff50055;
	border: 3px solid #fccc0088;
	pointer-events: none;
}

.selectbox[anti] {
	background: repeating-linear-gradient(135deg, #fff50055, #fff50055 .25em, #ff990055 0, #ff990055 .75em);
	border: 3px solid #fc000088;
}

/* Pin */

.pin {
	border: 1px solid #00000011;
	border-radius: 50%;
	width: 12px;
	height: 12px;
}

.pin[ref] {
	transform: rotateZ(45deg);
	border-radius: 0;
	width: 8px;
	height: 8px;
}

.board:not([linking]) .pin:hover, .pin:hover[match], .pin[active], .pin[linking] {
	border: 2px solid #f8ff77 !important;
}

.board[linking] .pin:not([match]):not([active]):not([linking]) {
	background: none !important;
}

.outpin {}

.inpin {}

/* Menu Item Header */

.mih {
	font-weight: bold;
	display: inline-block;
}

.overlay {
	width: 100%;
	height: 100%;
	position: absolute;
	background-color: #00000088;
	pointer-events: all;
}

